Fix for bug #42 (mailboxes scrollbar partially masked)
Monotone-Parent: eba51f48761a50897d61f4fffe1e4122f78c7a2d
Monotone-Revision: 1acc761bfb4e7e0ca47d3e5da4145d1260b8aa14

Monotone-Author: flachapelle@inverse.ca
Monotone-Date: 2009-07-06T19:57:33
Monotone-Branch: ca.inverse.sogo

--- a/UI/WebServerResources/MailerUI.css
+++ b/UI/WebServerResources/MailerUI.css
@@ -85,9 +85,11 @@ DIV#folderTreeContent
   position: absolute;
   color: #000;
   background: #fff;
-  width: 100%;
+  width: auto;
   top: 2em;
   bottom: 0px;
+  left: 0px;
+  right: 0px;
   overflow: auto; }
 
 #label-menu LI.label1
